--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;600&display=swap");
 :root {
   --primary: #1c2b36;
   --secondary: #17242e;
@@ -9,7 +9,7 @@
 * {
   /* padding: 0;
     margin: 0; */
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   /* box-sizing: border-box; */
 }
 html {
@@ -152,6 +152,14 @@ label #sidebar_btn:hover {
   margin-left: 165px;
   width: 100%;
 }
+.navbtn
+{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  
+  justify-content: space-evenly;
+}
 
 .content {
   width: (100% - 250px);
@@ -187,10 +195,11 @@ label #sidebar_btn:hover {
   box-shadow: 0px 0px 0px #5a71d01b;
   border: 1px solid #dde4eb;
   opacity: 1;
-  margin-left: 20px;
+  margin:auto;
   width: 95%;
-  height: 608px;
+  /* height: 608px; */
   margin-top: 30px;
+  padding-bottom: 20px;
 }
 
 #check:checked ~ .content {
@@ -783,4 +792,553 @@ label #sidebar_btn:hover {
 #back2Top:hover {
   background-color: var(--primary);
   color: var(--secondary);
+}
+
+
+
+/* overview css */
+
+.head_div
+{
+  width: 95%;
+  margin: auto;
+  /* background-color: red; */
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
+}
+.head_div .h3
+{
+  /* margin-left: 20px; */
+  font-weight: bold;
+  font-size: 16px;
+}
+.head_div .head_btn
+{
+  /* margin-right: 20px; */
+
+}
+.head_btn a
+{
+  text-decoration: none;
+  background-color: #2B80FF;
+  font-size: .7rem;
+  padding: 10px;
+  border-radius:5px ;
+  color: white;
+}
+.performance_progress
+{
+  width: 95%;
+  margin: auto;
+}
+.performance_progress h5
+{
+  margin-bottom: 3px;
+  color: #1C2B36;
+  font-size: 12px;
+  font-weight: 600;
+}
+.performance_progress h5 span
+{
+  color: #3A85E8;
+  font-size: 12px;
+  font-weight: bold;
+}
+.p_bg
+{
+  width: 100%;
+  height: 20px;
+  background-color:#ECEBEB ;
+  position: relative;
+}
+.p_progress
+{
+  position: absolute;
+  width: 78%;
+  height: 20px;
+  background-color:#659CFF ;
+}
+
+.progress_tiles
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.progress_tile1
+{
+  background-color: #FF808B;
+  width: 49%;
+  display: flex;
+  margin-top: 20px;
+  border-radius: 20px;
+  height: 100px;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.progress_tile1 .left
+{
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+.progress_tile1 .p_number1
+{
+  margin-right: 10px;
+
+}
+.p_number1
+{
+  background-color: #FA6E7A;
+  width: 86px;
+  height: 67px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+}
+.progress_tile1 .p_number1 p
+{
+  color: white;
+  font-weight: lighter;
+  font-size: 25.49px;
+  /* padding: 10px; */
+  /* height: 20px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10px;
+  /* height: 50px; */
+  border-radius: 13px;
+}
+.progress_tile1 .p_name p
+{
+ color: white;
+ font-size: 20px;
+ font-weight:400;
+ width: 20px;
+ line-height: 20px;
+ display: flex;
+}
+
+
+
+/* ptile 2 */
+.progress_tile2
+{
+  background-color: #659CFF;
+  width: 49%;
+  display: flex;
+  margin-top: 20px;
+  border-radius: 20px;
+  height: 100px;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.progress_tile2 .left
+{
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+.progress_tile2 .p_number2
+{
+  margin-right: 10px;
+
+}
+.p_number2
+{
+  background-color: #5E87FE;
+  width: 86px;
+  height: 67px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+}
+.progress_tile2 .p_number2 p
+{
+  color: white;
+  font-weight: lighter;
+  font-size: 25.49px;
+  /* padding: 10px; */
+  /* height: 20px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10px;
+  height: 50px;
+  border-radius: 13px;
+}
+.progress_tile2 .p_name p
+{
+ color: white;
+ font-size: 20px;
+ font-weight:400;
+ /* width:100px; */
+ line-height: 20px;
+ display: flex;
+}
+
+
+/* p3 */
+
+.progress_tile3
+{
+  background-color: #4D4CAC;
+  width: 49%;
+  display: flex;
+  margin-top: 20px;
+  border-radius: 20px;
+  height: 100px;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.progress_tile3 .left
+{
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+.progress_tile3 .p_number3
+{
+  margin-right: 10px;
+
+}
+.p_number3
+{
+  background-color: #4241A4;
+  width: 86px;
+  height: 67px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+}
+
+.progress_tile3 .p_number3 p
+{
+  color: white;
+  font-weight: lighter;
+  font-size: 25.49px;
+  /* padding: 10px; */
+  /* height: 20px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10px;
+  height: 50px;
+  background-color: #4241A4;
+  border-radius: 13px;
+}
+.progress_tile3 .p_name p
+{
+ color: white;
+ font-size: 20px;
+ font-weight:400;
+ /* width: 20px; */
+ line-height: 20px;
+ display: flex;
+}
+/* p4 */
+.progress_tile4
+{
+  background-color: #8C4CAC;
+  width: 49%;
+  display: flex;
+  margin-top: 20px;
+  border-radius: 20px;
+  height: 100px;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.progress_tile4 .left
+{
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+.progress_tile4 .p_number4
+{
+  margin-right: 10px;
+
+}
+.p_number4
+{
+  background-color: #6A36A5;  
+  width: 86px;
+  height: 67px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+}
+
+.progress_tile4 .p_number4 p
+{
+  color: white;
+  font-weight: lighter;
+  font-size: 25.49px;
+  /* padding: 10px; */
+  /* height: 20px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10px;
+  height: 50px;
+  border-radius: 13px;
+}
+.progress_tile4 .p_name p
+{
+ color: white;
+ font-size: 20px;
+ font-weight:400;
+ /* width: 20px; */
+ line-height: 20px;
+ display: flex;
+}
+.progress_circle
+{
+  margin-right: 20px;
+}
+.MuiCircularProgress-colorPrimary
+{
+  color: white!important;
+}
+
+.audit_results
+{
+  width: 100%;
+  margin-top: 50px;
+}
+
+.audit_results .title
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  background-color: #1C2B36;
+  color: white;
+}
+.title .icon
+{
+  margin-left: 10px;
+}
+.title h4
+{
+  margin-left: 10px;
+}
+.results
+{
+  width: 95%;
+  margin: auto;
+  margin-top: 22px;
+}
+.results .question
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #F8F8F8;
+  margin-bottom: 10px;
+}
+.question p
+{
+  padding-left: 10px;
+  font-size: 14px;
+  font-weight: 300;
+  color: #495463;
+}
+.q_icon
+{
+  padding-right: 10px;
+  color: #686868;
+}
+.question .q1
+{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 5px;
+
+}
+.bullet
+{
+  color: #FFC102;
+  font-size: .5rem;
+}
+
+.mbar
+{
+  background-color: #FA6E7A;
+  width: 26%;
+}
+.mtitle h5 span
+{
+  color: #FA6E7A;
+}
+.content_head_div
+{
+  display: flex;
+  flex-direction: column;
+  width: 95%;
+  margin: auto;
+  margin-top: 10px;
+}
+.line
+{
+  width: 10%;
+  background-color:#659CFF;
+  height: 3px;
+  margin-top: 5px;
+}
+.content_head_div p
+{
+  margin-top: 10px;
+  font-size: 12px;
+  color: #1C2B36;
+}
+
+.tabs
+{
+  width: 95%;
+  margin: auto;
+}
+.tabs_titles ul
+{
+  text-decoration: none;
+  list-style: none;
+  display: flex;
+  padding: 0px;
+  margin-bottom: 12px;
+}
+.tabs_titles ul li
+{
+  margin-right: 20px;
+}
+.tabs_titles ul li a
+{
+  text-decoration: none;
+  color: #1C2B36;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.tabs_titles ul li a:hover
+{
+  background-color: #659CFF;
+  color: white;
+  padding: 10px;
+}
+.tabline
+{
+  width: 95%;
+  margin: auto;
+  height: 2px;
+  background-color: #659CFF;
+}
+.home_sec
+{
+  width: 95%;
+  margin: auto;
+  margin-top: 20px;
+  /* height: 100px; */
+  box-shadow: 2px 3px 13px 0px rgba(0,0,0,0.2);
+  display: flex;
+  justify-content: center;
+
+}
+.status
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 20px 0px;
+}
+.feature_status
+{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.feature_status a
+{
+  text-decoration: none;
+  background-color: #FA6E7A;
+  color: white;
+  padding: 5px;
+  font-size: 12px;
+  margin-left: 5px;
+}
+.activate a
+{
+  text-decoration: none;
+  background-color: #1AB58B;
+  color: white;
+  font-weight: 400;
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  margin: auto;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 20px;
+
+}
+.form_section
+{
+  width: 95%;
+  margin: auto;
+  
+}
+.form
+{
+  display: flex;
+  flex-direction: column;
+}
+.form_input
+{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+.form label
+{
+  color: #1C2B36;
+  font-size: 12px;
+  font-weight: 350;
+  margin-bottom: 10px;
+}
+.form input
+{
+  background-color: #F5F5F5;
+  border: none;
+  border-radius: 10px;
+  height: 20px;
+}
+.form .form_input:nth-child(2) input
+{
+  height: 50px;
+}
+
+.form_btn
+{
+  background-color: #2B80FF;
+  width: 5%;
+  text-decoration: none;
+  color: white;
+  text-align: center;
+  padding: 7px;
+  font-size: 12px;
+  border-radius: 5px;
 }
